# Custom-SmoothD_for_AviUtl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: MSYS2build.yml  build.yml  msbuild.yml
include/: SmoothDfA.hpp  dct_int32.h  dct_int32.hpp  filter.h  ht.hpp  idct_clip_table.h  idct_clip_table.hpp  idct_int32.hpp
src/: SmoothDfA.cpp  SmoothDfA.def  dct_int32.c  dct_int32.cpp  ht.cpp  idct_clip_table.c  idct_int32.c  idct_int32.cpp
